fix alignment

--- a/styles/components/_querygg_banner.scss
+++ b/styles/components/_querygg_banner.scss
@@ -58,6 +58,7 @@
 
 .corner-sun {
   width: 100%;
+  margin-left: -.02rem;
 }
 
 .corner-moon {
